// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SecondSignatureRegistrationForm > backup step > should render 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        data-testid="SecondSignatureRegistrationForm__backup-step"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex items-center gap-3"
            >
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Your Second Signature
              </h1>
            </div>
          </div>
        </div>
        <div
          class="space-y-4 pt-6 sm:pt-4"
        >
          <div
            class="flex flex-col overflow-hidden rounded-xl"
          >
            <div
              class="css-rzhg83"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="circle-exclamation-mark"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="9"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M10 10.5v-5"
                      stroke-linecap="round"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M10 14h0"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
              <span>
                Warning
              </span>
            </div>
            <div
              class="css-trjt6n"
            >
              You are responsible for storing and protecting this mnemonic passphrase offline. ARK Vault cannot reveal this to you at a later time. If you lose this mnemonic passphrase, you will lose your funds.
            </div>
          </div>
          <ul
            class="grid grid-cols-1 gap-x-3 gap-y-2 sm:grid-cols-4 sm:gap-y-4 sm:pt-1.5"
          >
            <li
              class="relative flex items-center rounded border border-theme-secondary-400 p-0 dark:border-theme-secondary-700 sm:p-4"
              data-testid="MnemonicList__item"
            >
              <span
                class="absolute left-0 top-0 hidden -translate-y-2.5 translate-x-2 bg-theme-background px-1 text-sm font-semibold text-theme-secondary-700 sm:block"
              >
                1
              </span>
              <div
                class="mr-4 block w-12 rounded-l bg-theme-secondary-200 p-2 text-center text-sm font-semibold text-theme-secondary-700 dark:bg-theme-secondary-200 dark:text-theme-secondary-800 sm:hidden"
              >
                1
              </div>
              <div
                class="sm:text-md text-sm"
              >
                test
              </div>
            </li>
            <li
              class="relative flex items-center rounded border border-theme-secondary-400 p-0 dark:border-theme-secondary-700 sm:p-4"
              data-testid="MnemonicList__item"
            >
              <span
                class="absolute left-0 top-0 hidden -translate-y-2.5 translate-x-2 bg-theme-background px-1 text-sm font-semibold text-theme-secondary-700 sm:block"
              >
                2
              </span>
              <div
                class="mr-4 block w-12 rounded-l bg-theme-secondary-200 p-2 text-center text-sm font-semibold text-theme-secondary-700 dark:bg-theme-secondary-200 dark:text-theme-secondary-800 sm:hidden"
              >
                2
              </div>
              <div
                class="sm:text-md text-sm"
              >
                mnemonic
              </div>
            </li>
          </ul>
          <div
            class="-mx-4 space-y-2 bg-theme-secondary-100 p-6 text-center dark:bg-black sm:mx-0 sm:rounded-xl sm:text-left"
          >
            <span
              class="text-lg font-semibold text-theme-secondary-text"
            >
              Copy or Download Mnemonic Passphrase
            </span>
            <p
              class="text-sm text-theme-secondary-500"
            >
              You can copy or download your mnemonic, but store it safely.
            </p>
            <div
              class="flex items-center justify-center space-x-3 sm:justify-start"
            >
              <button
                aria-describedby="tippy-10"
                class="ring-focus relative focus:outline-none"
                data-ring-focus-margin="-m-1"
                data-testid="clipboard-icon__wrapper"
                type="button"
              >
                <div
                  class="flex items-center space-x-2 font-semibold link"
                >
                  <div
                    class="css-v0ob3f"
                    height="16"
                    width="16"
                  >
                    <svg
                      id="copy"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                        />
                        <path
                          d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                        />
                      </g>
                    </svg>
                  </div>
                  <span>
                    Copy
                  </span>
                </div>
              </button>
              <div
                class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                type="vertical"
              />
              <button
                class="flex items-center space-x-2 font-semibold link"
                data-testid="CopyOrDownload__download"
                type="button"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="arrow-down-bracket"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M19 13.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9M9.95 2v11.1m4.7-4.7l-4.7 4.7-4.6-4.7"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
                <span>
                  Download
                </span>
              </button>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SecondSignatureRegistrationForm > should not generate mnemonic if already set 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        class="space-y-6 pt-6 sm:space-y-4 sm:pt-4"
        data-testid="SecondSignatureRegistrationForm__generation-step"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex items-center gap-3"
            >
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Register Second Signature
              </h1>
            </div>
            <div
              class="flex items-center leading-5 text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              You can additionaly secure your address with a second mnemonic passphrase.
            </div>
          </div>
        </div>
        <div
          class="flex flex-col overflow-hidden rounded-xl"
        >
          <div
            class="css-rzhg83"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="circle-exclamation-mark"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="10"
                    r="9"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M10 10.5v-5"
                    stroke-linecap="round"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M10 14h0"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </g>
              </svg>
            </div>
            <span>
              Warning
            </span>
          </div>
          <div
            class="css-trjt6n"
          >
            Before creating the second mnemonic, we strongly recommend that you save it, as its loss will lead to a loss of access to your money.
          </div>
        </div>
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <div
            data-testid="DetailWrapper"
          >
            <div
              class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
              data-testid="DetailLabel"
            >
              <div
                class="no-ligatures text-md min-w-24 font-semibold leading-5 text-theme-secondary-700 dark:text-theme-secondary-500"
                data-testid="DetailLabelText"
              >
                Addressing
              </div>
            </div>
            <div
              class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 [.condensed_&]:sm:py-4 mt-0 sm:mt-2"
            >
              <div
                class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
              >
                <div
                  class="no-ligatures w-20 flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5"
                >
                  From
                </div>
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end sm:justify-start"
                >
                  <span
                    class="font-semibold text-base text-theme-text text-sm leading-[17px] sm:leading-5 sm:text-base"
                    data-testid="Address__alias"
                  >
                    <span
                      class="no-ligatures css-9nx3be"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <div
                    class="relative grow leading-[17px] sm:leading-5 text-left"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] sm:leading-5 sm:text-base w-full w-3/4 text-theme-secondary-500 dark:text-theme-secondary-700  font-semibold text-base absolute w-full"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                    <span>
                       
                    </span>
                  </div>
                  <button
                    class="ring-focus relative focus:outline-none"
                    data-ring-focus-margin="-m-1"
                    data-testid="clipboard-icon__wrapper"
                    type="button"
                  >
                    <div
                      class="text-theme-primary-400 dark:text-theme-secondary-700 dark:hover:text-theme-secondary-500 css-v0ob3f"
                      height="16"
                      width="16"
                    >
                      <svg
                        id="copy"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                          />
                          <path
                            d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                          />
                        </g>
                      </svg>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <div>
          <fieldset
            class="-mt-3 sm:mt-0 css-1bcidjh"
          >
            <label
              class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
            </label>
            <div
              class="relative"
            >
              <div
                class="css-xk5t3v"
                disabled=""
              >
                <div
                  class="relative flex h-full flex-1"
                >
                  <input
                    autocomplete="off"
                    class="no-ligatures w-full border-none text-theme-secondary-text css-1vs1awz"
                    data-testid="InputCurrency"
                    disabled=""
                    name="fee"
                    type="text"
                    value="1.354"
                  />
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600 divide-none"
                  data-testid="Input__addon-end"
                >
                  <div
                    class=""
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="-mr-4 flex h-14 w-22 flex-row justify-between border-l text-theme-secondary-700 dark:border-theme-secondary-700 sm:w-10 sm:flex-col border-theme-secondary-300"
                      >
                        <button
                          class="border-r sm:border-r-0 css-jmpn15"
                          data-testid="InputFeeAdvanced__up"
                          disabled=""
                          type="button"
                        >
                          <div
                            class="css-15txs7d"
                            height="10"
                            width="10"
                          >
                            <svg
                              id="chevron-up-small"
                              viewBox="0 0 10 10"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M1 6.975l3.8-3.8c.1-.1.3-.1.4 0l3.8 3.8"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </button>
                        <button
                          class="css-1ddtsjs"
                          data-testid="InputFeeAdvanced__down"
                          disabled=""
                          type="button"
                        >
                          <div
                            class="css-15txs7d"
                            height="10"
                            width="10"
                          >
                            <svg
                              id="chevron-down-small"
                              viewBox="0 0 10 10"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SecondSignatureRegistrationForm > should render generation step 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        class="space-y-6 pt-6 sm:space-y-4 sm:pt-4"
        data-testid="SecondSignatureRegistrationForm__generation-step"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex items-center gap-3"
            >
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Register Second Signature
              </h1>
            </div>
            <div
              class="flex items-center leading-5 text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              You can additionaly secure your address with a second mnemonic passphrase.
            </div>
          </div>
        </div>
        <div
          class="flex flex-col overflow-hidden rounded-xl"
        >
          <div
            class="css-rzhg83"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="circle-exclamation-mark"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="10"
                    r="9"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M10 10.5v-5"
                    stroke-linecap="round"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M10 14h0"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </g>
              </svg>
            </div>
            <span>
              Warning
            </span>
          </div>
          <div
            class="css-trjt6n"
          >
            Before creating the second mnemonic, we strongly recommend that you save it, as its loss will lead to a loss of access to your money.
          </div>
        </div>
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <div
            data-testid="DetailWrapper"
          >
            <div
              class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
              data-testid="DetailLabel"
            >
              <div
                class="no-ligatures text-md min-w-24 font-semibold leading-5 text-theme-secondary-700 dark:text-theme-secondary-500"
                data-testid="DetailLabelText"
              >
                Addressing
              </div>
            </div>
            <div
              class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 [.condensed_&]:sm:py-4 mt-0 sm:mt-2"
            >
              <div
                class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
              >
                <div
                  class="no-ligatures w-20 flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5"
                >
                  From
                </div>
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end sm:justify-start"
                >
                  <span
                    class="font-semibold text-base text-theme-text text-sm leading-[17px] sm:leading-5 sm:text-base"
                    data-testid="Address__alias"
                  >
                    <span
                      class="no-ligatures css-9nx3be"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <div
                    class="relative grow leading-[17px] sm:leading-5 text-left"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] sm:leading-5 sm:text-base w-full w-3/4 text-theme-secondary-500 dark:text-theme-secondary-700  font-semibold text-base absolute w-full"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                    <span>
                       
                    </span>
                  </div>
                  <button
                    class="ring-focus relative focus:outline-none"
                    data-ring-focus-margin="-m-1"
                    data-testid="clipboard-icon__wrapper"
                    type="button"
                  >
                    <div
                      class="text-theme-primary-400 dark:text-theme-secondary-700 dark:hover:text-theme-secondary-500 css-v0ob3f"
                      height="16"
                      width="16"
                    >
                      <svg
                        id="copy"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                          />
                          <path
                            d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                          />
                        </g>
                      </svg>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <div>
          <fieldset
            class="-mt-3 sm:mt-0 css-1bcidjh"
          >
            <label
              class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
            </label>
            <div
              class="relative"
            >
              <div
                class="css-xk5t3v"
                disabled=""
              >
                <div
                  class="relative flex h-full flex-1"
                >
                  <input
                    autocomplete="off"
                    class="no-ligatures w-full border-none text-theme-secondary-text css-1vs1awz"
                    data-testid="InputCurrency"
                    disabled=""
                    name="fee"
                    type="text"
                    value="1.354"
                  />
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600 divide-none"
                  data-testid="Input__addon-end"
                >
                  <div
                    class=""
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="-mr-4 flex h-14 w-22 flex-row justify-between border-l text-theme-secondary-700 dark:border-theme-secondary-700 sm:w-10 sm:flex-col border-theme-secondary-300"
                      >
                        <button
                          class="border-r sm:border-r-0 css-jmpn15"
                          data-testid="InputFeeAdvanced__up"
                          disabled=""
                          type="button"
                        >
                          <div
                            class="css-15txs7d"
                            height="10"
                            width="10"
                          >
                            <svg
                              id="chevron-up-small"
                              viewBox="0 0 10 10"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M1 6.975l3.8-3.8c.1-.1.3-.1.4 0l3.8 3.8"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </button>
                        <button
                          class="css-1ddtsjs"
                          data-testid="InputFeeAdvanced__down"
                          disabled=""
                          type="button"
                        >
                          <div
                            class="css-15txs7d"
                            height="10"
                            width="10"
                          >
                            <svg
                              id="chevron-down-small"
                              viewBox="0 0 10 10"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SecondSignatureRegistrationForm > should render transaction details 1`] = `
<DocumentFragment>
  <div
    class="no-ligatures css-1snru0x"
    data-testid="TransactionFee"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Transaction Fee
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <span
          class="whitespace-nowrap"
          data-testid="Amount"
        >
          0.1 DARK
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
